tests/compile-fail/invalid_utc_datetime.stderr
error: invalid component: ordinal was 0
 --> $WORKSPACE/tests/compile-fail/invalid_utc_datetime.rs
  |
  |     let _ = utc_datetime!(2021-000 0:00);
  |                                ^^^

error: invalid component: hour was 24
 --> $WORKSPACE/tests/compile-fail/invalid_utc_datetime.rs
  |
  |     let _ = utc_datetime!(2021-001 24:00);
  |                                    ^^

error: unexpected token: 0
 --> $WORKSPACE/tests/compile-fail/invalid_utc_datetime.rs
  |
  |     let _ = utc_datetime!(2021-001 0:00 0);
  |                                         ^

error: unexpected token: UTC
 --> $WORKSPACE/tests/compile-fail/invalid_utc_datetime.rs
  |
  |     let _ = utc_datetime!(2021-001 0:00 UTC);
  |                                         ^^^

error: unexpected token: UTC
 --> $WORKSPACE/tests/compile-fail/invalid_utc_datetime.rs
  |
  |     let _ = utc_datetime!(2021-001 0:00 UTC x);
  |                                         ^^^
